--- a/Week03-ExpressRoutes/views/layout.jade
+++ b/Week03-ExpressRoutes/views/layout.jade
@@ -4,6 +4,7 @@ html
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
         script(src='components/jquery/dist/jquery.js')
+        script(src="javascripts/callRead.js")
         script(src="javascripts/control.js")
     body
         block content
