--- a/Week04-ThreeFloors/public/stylesheets/style.css
+++ b/Week04-ThreeFloors/public/stylesheets/style.css
@@ -1,8 +1,12 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+      background-color: #ffffff;
+      margin: 0;
+      overflow: hidden;
+      font-family: arial;
 }
 
-a {
-  color: #00B7FF;
+html, body {
+    width: 100%;
+    height: 100%;
 }
