--- a/Week04-ThreeFloors/views/index.jade
+++ b/Week04-ThreeFloors/views/index.jade
@@ -4,6 +4,4 @@ block content
     h1= title
     p Welcome to #{title}
 
-    div.buttons
-        button.homeMenu.btn.btn-primary Home
-        button.aboutMenu.btn.btn-success About
+    div#gameWindow
