--- a/Week04-PointerLock/public/stylesheets/style.css
+++ b/Week04-PointerLock/public/stylesheets/style.css
@@ -1,16 +1,71 @@
-body {
-
-      background-color: #ffffff;
-      margin: 0;
-      overflow: hidden;
-      font-family: arial;
-}
-
 html, body {
     width: 100%;
     height: 100%;
 }
 
+body {
+    background-color: #ffffff;
+    margin: 0;
+    overflow: hidden;
+    font-family: arial;
+}
+
+#content {
+    display: block;
+}
+
+
+#blocker {
+
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0,0,0,0.5);
+
+}
+
+#instructions {
+
+    width: 100%;
+    height: 100%;
+
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    box-orient: horizontal;
+
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    box-pack: center;
+
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    box-align: center;
+
+    color: #ffffff;
+    text-align: center;
+
+    cursor: pointer;
+
+}
+
 h1{
   text-align: center;
+}
+
+#message {
+    /* background-color: #7777AA; */
+    background-color:rgba(0,255,0,0.5);
+    position: absolute;
+    left: 0.5em;
+    top: 0.5em;
+    width: 250px;
+    min-width: 10%;
+    font-size: 10px;
+    border: solid black 2px;
 }
