--- a/Week05-MazeBuilder/views/index.jade
+++ b/Week05-MazeBuilder/views/index.jade
@@ -13,3 +13,9 @@ block content
         p
             strong CameraZ:
                 span#cameraZ initializing
+        p
+            strong velocity:
+                span#velocity initializing
+        p
+            strong dbg:
+                span#dbg initializing
