--- a/Week05-DataMaster/views/index.jade
+++ b/Week05-DataMaster/views/index.jade
@@ -20,6 +20,8 @@ block content
         //a(href='/#/insertOneDoc') Insert Game Data as one document
         li
             a(href="/#/insertDesignDoc") Insert Design Doc
+        li 
+            a(href="/#/viewNpc") View By Name
 
     p {{debug}}
 
