got scoreboard and basic NPC collision handler working

--- a/Week06-MazeDataReader/views/index.jade
+++ b/Week06-MazeDataReader/views/index.jade
@@ -12,3 +12,6 @@ block content
                 span#cameraX initializing
                 span ,&nbsp
                 span#cameraZ initializing
+        p
+            strong Score - 
+                span#score 0
