readNpcAskQuestion works, now building readNpcTryGuess

--- a/Week07-Midterm/views/index.jade
+++ b/Week07-Midterm/views/index.jade
@@ -12,3 +12,4 @@ block content
                 span#cameraX initializing
                 span ,&nbsp
                 span#cameraZ initializing
+    div#popupArea
