--- a/Week07-Midterm/public/stylesheets/style.css
+++ b/Week07-Midterm/public/stylesheets/style.css
@@ -69,3 +69,22 @@ h1{
     font-size: 10px;
     border: solid black 2px;
 }
+
+#popupArea{
+  width: 100%;
+  height: 100%;
+}
+
+.popup {
+    /* background-color: #7777AA; */
+    background-color:rgba(0,255,0,0.5);
+    position: absolute;
+    left: 40%;
+    top: 40%;
+    right: 40%;
+    bottom: 45%;
+    //width: 250px;
+    min-width: 250px;
+    font-size: 10px;
+    border: solid black 2px;
+}
