--- a/Week07-Midterm/views/index.jade
+++ b/Week07-Midterm/views/index.jade
@@ -6,10 +6,11 @@ block content
             span(style='font-size:40px') Click to play
             p (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
     div#gameWindow
-    div#message
+    div#hudWindow
         p
             strong How lost you are: 
                 span#cameraX initializing
                 span ,&nbsp
                 span#cameraZ initializing
+        p#hudMessages
     div#popupArea
