--- a/Week07-Midterm/public/stylesheets/style.css
+++ b/Week07-Midterm/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+*{
+  font-family: arial, sans-serif;
+}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -8,6 +12,10 @@ body {
     margin: 0;
     overflow: hidden;
     font-family: arial;
+}
+
+p{
+  font-size: 1.75em;
 }
 
 #content {
@@ -29,15 +37,18 @@ body {
 #instructions {
 
     width: 100%;
-    height: 100%;
+    height: 50%;
+
+    padding: 1%;
+    padding-bottom: 50%;
 
     display: -webkit-box;
     display: -moz-box;
     display: box;
 
-    -webkit-box-orient: horizontal;
-    -moz-box-orient: horizontal;
-    box-orient: horizontal;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    box-orient: vertical;
 
     -webkit-box-pack: center;
     -moz-box-pack: center;
@@ -79,12 +90,13 @@ h1{
     /* background-color: #7777AA; */
     background-color:rgba(0,255,0,0.5);
     position: absolute;
-    left: 40%;
-    top: 40%;
+    left: 20%;
+    top: 55%;
     right: 40%;
-    bottom: 45%;
-    //width: 250px;
+    bottom: 15%;
+    width: 40%;
     min-width: 250px;
     font-size: 10px;
-    border: solid black 2px;
+    border: groove black 2px;
+    padding: 1% 1%;
 }
