working on insertNewNpc route

--- a/Week07-DataMaster/views/index.jade
+++ b/Week07-DataMaster/views/index.jade
@@ -6,14 +6,14 @@ block content
         | Welcome to #{title}. Click the options below, and if necessary 
         | scroll down to see the results.
 
-    ul
+    ul DBO master stuff
         li 
             a(href='/#/databaseName') Get current Database Name and all names
         li
             a(href='/#/createDb') CreateDb
         li
             a(href='/#/deleteDb') DeleteDb
-    ul
+    ul NPC stuff
         li
             a(href='/#/insertBulk') Insert Game Data in Bulk
         //li
@@ -22,6 +22,8 @@ block content
             a(href="/#/insertDesignDoc") Insert Design Doc
         li 
             a(href="/#/viewNpc") View By Name
+        li
+            a(href="/#/insertNewNpc") Add new NPC to database
 
     p {{debug}}
 
