moved animateReducedUpdate timing logic into animateReducedUpdate function rather than being in the main animate method

--- a/Week07-DataMaster/views/index.jade
+++ b/Week07-DataMaster/views/index.jade
@@ -25,8 +25,8 @@ block content
                 a(href="/#/insertDesignDoc") Insert NPC Design Doc
             li 
                 a(href="/#/viewNpc") View NPCs By Name
-            li
-                a(href="/#/showInsertNewNpcInterface") Open "add new NPC to database" dialog
+            //li
+            //a(href="/#/showInsertNewNpcInterface") Open "add new NPC to database" dialog
 
     p {{debug}}
 
