working on datamaster upgrade

--- a/Week07-DataMaster/views/index.jade
+++ b/Week07-DataMaster/views/index.jade
@@ -2,33 +2,10 @@ extends layout
 
 block content
     h1= title
-    p 
-        | Welcome to #{title}. Click the options below, and if necessary 
-        | scroll down to see the results.
-    article
-        h2 DBO master stuff
-        ul
-            li 
-                a(href='/#/databaseName') Get current Database Name and all names
-            li
-                a(href='/#/createDb') CreateDb
-            li
-                a(href='/#/deleteDb') DeleteDb
-    article
-        h2 NPC stuff
-        ul
-            li
-                a(href='/#/insertBulk') Insert NPC Game Data in Bulk
-            //li
-            //a(href='/#/insertOneDoc') Insert Game Data as one document
-            li
-                a(href="/#/insertDesignDoc") Insert NPC Design Doc
-            li 
-                a(href="/#/viewNpc") View NPCs By Name
-            //li
-            //a(href="/#/showInsertNewNpcInterface") Open "add new NPC to database" dialog
-
-    p {{debug}}
-
-    div(class="jumbotron")
-        div(data-ng-view='')
+    h2= subtitle
+    div(class='.container')
+        div(class='row')
+            div(class='col-sm-3 col-primary btn-group-vertical')#buttonPanelControls
+            div(class='col-sm-9 jumbotron')
+                h3#responseTitle Welcome
+                div#responseBody Select a button on the left
