--- a/Week07-DataMaster/public/stylesheets/style.css
+++ b/Week07-DataMaster/public/stylesheets/style.css
@@ -1,31 +1,8 @@
-
 body {
   padding: 50px;
-  font: 1.15em "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
-  border: groove 0.2em lightskyblue;
-  border-radius: 0.33em;
-  margin-bottom: 0.33em;
-  margin-top: 0.33em;
-  padding: 0em 0.25em;
-}
-
-a:hover{
-  color: lightgoldenrodyellow;
-  font-weight: bold;
-  background-color: #00B7FF;
-  border: dotted 0.1em lightskyblue;
-}
-
-li{
-  padding-top: 0.15em;
-  padding-bottom: 0.15em;
-}
-
-p {
-	width: 800px;
-  font-size: 1.5em;
 }
