--- a/Week07-DataMaster/views/layout.jade
+++ b/Week07-DataMaster/views/layout.jade
@@ -1,11 +1,12 @@
 doctype html
-html(data-ng-app='myModule')
+html
     head
         title= title
         script(src="components/jquery/dist/jquery.min.js")
-        script(src="components/angular/angular.js")
-        script(src="components/angular-route/angular-route.js")
-        script(src="javascripts/Control.js")    
+        script(src="components/requirejs/require.js")
+        script(src="components/bootstrap/dist/js/bootstrap.min.js")
+        script(src="javascripts/main.js")
+        link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.min.css')
         link(rel='stylesheet', href='/stylesheets/style.css')
     body
         block content
