--- a/Week07-DataMaster/views/template/npcLine.jade
+++ b/Week07-DataMaster/views/template/npcLine.jade
@@ -1,7 +1,7 @@
 div(class='row')
     div(class='col-sm-4')
-        h3{npc_id}
+        h3 #{npc_id}
     div(class='col-sm-4')
-        h3{npc_name}
+        h3 #{npc_name}
     div(class='col-sm-4')
         button(class='btn btn-primary btn-lg btn-block') edit
