redid couchroutemaster route handling, and now loading npc data next is save function

--- a/Week07-DataMaster/views/index.jade
+++ b/Week07-DataMaster/views/index.jade
@@ -8,4 +8,4 @@ block content
             div(class='col-sm-3 col-primary btn-group-vertical')#buttonPanelControls
             div(class='col-sm-9 jumbotron')
                 h3#responseTitle Welcome
-                div#responseBody Select a button on the left
+                div#responseBody Select a button on the left when they load..
