--- a/Week07-DataMaster/views/template/npcLine.jade
+++ b/Week07-DataMaster/views/template/npcLine.jade
@@ -1,7 +1,9 @@
-div(class='row')
-    div(class='col-sm-4')
-        h3 #{npc_id}
-    div(class='col-sm-4')
-        h3 #{npc_name}
-    div(class='col-sm-4')
-        button(class='btn btn-primary btn-lg btn-block') edit
+div(class='well row' style='box-shadow: 0em 0em .15em #{color}')
+    div(class='col-sm-2')
+        h4 #{npc_id}
+    div(class='col-sm-5')
+        h4 #{npc_name}
+    div(class='col-sm-5')
+        button(class='btn btn-primary btn-lg btn-block' 
+        myRouteToCall='/editor/npc/#{npc_id}' 
+        id='buttonEditNpc#{npc_id}') edit
