trying to make updates work

--- a/Week07-DataMaster/views/template/npcEditSingle.jade
+++ b/Week07-DataMaster/views/template/npcEditSingle.jade
@@ -25,6 +25,6 @@ div(class='container')
         span(class='') Original: #{answer}
 
 div(class='row')
-    button(class='btn btn-warning col-sm-3' jeffersonDbRouteToCall='/editor/npc/list' id='buttonCancel') Cancel
+    button(class='btn btn-warning col-sm-3' jeffersonDbRouteToCall='/editor/npc/list/' id='buttonCancel') Cancel
     span(class='col-sm-5')
     button(class='btn btn-primary col-sm-4' jeffersonDbSubmitRoute='/editor/npc/update/' jeffersonDbEntryId='#{npc_id}' id='buttonUpdateDb') Save
