--- a/Week07-DataMaster/views/template/npcLine.jade
+++ b/Week07-DataMaster/views/template/npcLine.jade
@@ -10,7 +10,7 @@ div(class='well row' style='box-shadow: 0em 0em .25em #{color}')
             p(class='well') #{question}
     div(class='col-sm-5')
         button(class='btn btn-primary btn-lg btn-block' 
-        myRouteToCall='/editor/npc/#{npc_id}' 
+        jeffersonDbRouteToCall='/editor/npc/#{npc_id}' 
         id='buttonEditNpc#{npc_id}'
         ) edit 
             span(style='color:#{color}') &nbsp>
