still cannot get npc updates to work

--- a/Week07-DataMaster/views/index.jade
+++ b/Week07-DataMaster/views/index.jade
@@ -5,7 +5,7 @@ block content
     h2= subtitle
     div(class='.container')
         div(class='row')
-            div(class='col-sm-3 col-primary btn-group-vertical')#buttonPanelControls
-            div(class='col-sm-9 jumbotron')
+            div(class='col-sm-3 col-xs-12 col-primary')#buttonPanelControls
+            div(class='col-sm-9 col-xs-12 jumbotron')
                 h3#responseTitle Welcome
                 div#responseBody Select a button on the left when they load..
