mostly working google auth

--- a/Week08-Passport/views/index.jade
+++ b/Week08-Passport/views/index.jade
@@ -17,7 +17,7 @@ block content
     div
         a(href='/logout') Logout
 
-    button#status Information
+    button#buttonStatus Information
 
     div
         pre#report
