--- a/Week08-Passport/views/profile-google.jade
+++ b/Week08-Passport/views/profile-google.jade
@@ -1,6 +1,13 @@
 extends layout
 
 block content
-    h1 Google Account
-    h2 Welcome to google account
+    h1 #{title}
+    h2 Welcome #{user.name.givenName}
+    img(src= '#{user.photos[0].value}')
+    each val, _, idx in user._json
+        h3= idx
+        p= JSON.stringify(val)
+
     div#displayBasicInfo
+    pre #{JSON.stringify(user._json, null, 4)} 
+    //#{JSON.stringify(user, null, 4)}
