meh passport being weird

--- a/Week08-Passport/views/profile-google.jade
+++ b/Week08-Passport/views/profile-google.jade
@@ -9,5 +9,5 @@ block content
         p= JSON.stringify(val)
 
     div#displayBasicInfo
-    pre #{JSON.stringify(user._json, null, 4)} 
+    //pre #{JSON.stringify(user._json, null, 4)}
     //#{JSON.stringify(user, null, 4)}
