sessionbasics cleaned up

--- a/Week09-SessionBasics/views/index.jade
+++ b/Week09-SessionBasics/views/index.jade
@@ -7,6 +7,8 @@ block content
         button(jeffersonRoute="/page01" class='btn btn-primary') page 1
         button(jeffersonRoute="/page02" class='btn btn-primary') page 2
         button(jeffersonRoute="/page03" class='btn btn-primary') page 3
+        button(jeffersonRoute="/views/file-store" class='btn btn-secondary') File-store
+        button(jeffersonRoute="/views/request" class='btn btn-secondary') Request
     pre(class='jumbotron')#responseArea Welcome
     pre(class='well')#viewcount
     pre(class='alert alert-info')#debug Errors show up here
