--- a/Week10-ExpressPagesAndMixins/views/mixins.pug
+++ b/Week10-ExpressPagesAndMixins/views/mixins.pug
@@ -12,7 +12,7 @@ mixin nav(name, id, style)
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
-                a.navbar-brand(href='./index.html') #{name}
+                a.navbar-brand(href='./') #{name}
             .collapse.navbar-collapse( id=id )
                 ul.nav.navbar-nav
                     block
