got npc listing working, next is importing the old npc editor, then make it require passport login to access, then some game refinements, and move levels to the db, then make a level editor

--- a/DataMaster/views/editor/db/home.pug
+++ b/DataMaster/views/editor/db/home.pug
@@ -1,6 +1,5 @@
-import mixins-database
+include mixins-database
 
-block
-    h1 DB Editor
-    for dbitem in databases
-        +dbListButton(dbitem)
+h1 DB Editor
+for dbitem in databases
+    +dbListButton(dbitem)
