--- a/DataMaster/views/login-options.pug
+++ b/DataMaster/views/login-options.pug
@@ -5,17 +5,17 @@ block content
     p please sign in below:
 
     div
-        a(href='/facebook/login') Log In with Facebook
-    div
-        a(href="/facebook/profile") Facebook Profile
+        a.btn.btn-primary(href='/facebook/login') Log In with Facebook
+    //- div
+    //-     button(fishroute="/facebook/profile") Facebook Profile
 
     div
-        a(href='/auth/google') Log In Google
-    div
-        a(href='/auth/account') Google Account
+        a.btn.btn-primary(href='/auth/google') Log In Google
+    //- div
+    //-     button(fishroute='/auth/account') Google Account
 
-    div
-        a(href='/logout') Logout
+    //- div
+    //-     button(fishroute='/logout') Logout
 
     button#buttonStatus Information
 
