fixed glitch with login button

--- a/DataMaster/views/authentication/usernavbar.pug
+++ b/DataMaster/views/authentication/usernavbar.pug
@@ -1,8 +1,5 @@
 if isAuthenticated
-    li
-        .alert.alert-success.glyphicon.glyphicon-user Welcome #{user.displayName}
-    li
-        a.btn.btn-warning.glyphicon-log-out(href='/authentication/logout') Sign Out
+    span.navbar-text Welcome #{user.displayName} 
+    button.btn.navbar-btn.btn-warning( fishroute='/authentication/logout') Sign Out
 else
-    li
-        button.btn.btn-info(fishroute='/authentication/login').glyphicon.glyphicon-log-in Sign In
+    button.btn.navbar-btn.btn-info( fishroute='/authentication/login' ) Sign In
