--- a/DataMaster/views/mixin-littleMenu.pug
+++ b/DataMaster/views/mixin-littleMenu.pug
@@ -21,9 +21,9 @@ mixin littleMenu
 
 mixin littleMenuNavRoutes
     li
-        button.btn.btn-primary( fishroute='/editor/db/home' ) Database
+        button.btn.navbar-btn.btn-primary( fishroute='/editor/db/home' ) Database
     li
-        button.btn.btn-primary( fishroute='/editor/npc/home' ) NPC's
+        button.btn.navbar-btn.btn-primary( fishroute='/editor/npc/home' ) NPC's
 
 mixin littleMenuBranding
     a.navbar-brand(href='/')
