--- a/DataMaster/views/mixin-littleMenu.pug
+++ b/DataMaster/views/mixin-littleMenu.pug
@@ -2,19 +2,13 @@ mixin littleMenu
     nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
         .container-fluid
             .navbar-header
-                button.navbar-toggle.collapsed(
-                    type='button'
-                        data-toggle="collapse",
-                        data-target='#fishNavbarCollapse',
-                        aria-expanded='false',
-                        aria-controls="navbar"
-                        )
-                        span.sr-only Toggle navigation
-                        span.icon-bar
-                        span.icon-bar
-                        span.icon-bar
+                button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
+                    span.sr-only Toggle navigation
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
                 +littleMenuBranding
-            .collapse.navbar-collapse(id='fishNavbarCollapse')
+            #bs-example-navbar-collapse-1.collapse.navbar-collapse
                 ul.nav.navbar-nav
                     +littleMenuNavRoutes
                 ul#navbarSignInOutMenu.navbar.navbar-nav.navbar-right
