--- a/DataMaster/views/editor/npc/home.pug
+++ b/DataMaster/views/editor/npc/home.pug
@@ -1,5 +1,7 @@
 include mixins-npc
 
 h2 NPC Editor
+.btn-group
+    button.btn.btn-primary(fishroute='/editor/npc/db/home') Open NPC Database Control
 for npcItem in npcList
     +npcListItem(npcItem.value)
