added updated support for new db datamaster to game

--- a/DataMaster/views/editor/level/home.pug
+++ b/DataMaster/views/editor/level/home.pug
@@ -1,5 +1,7 @@
 include mixins-level
 
 h2 Level Editor
+.btn-group
+    button.btn.btn-primary(fishroute='/editor/level/db/home') Open level Database Control
 for levelItem in levelList
     +levelListItem(levelItem.value)
