--- a/DataMaster/views/mixin-littleMenu.pug
+++ b/DataMaster/views/mixin-littleMenu.pug
@@ -18,6 +18,8 @@ mixin littleMenuNavRoutes
         button.btn.navbar-btn.btn-primary( fishroute='/editor/db/home' ) Database
     li
         button.btn.navbar-btn.btn-primary( fishroute='/editor/npc/home' ) NPC's
+    li
+        button.btn.navbar-btn.btn-primary( fishroute='/editor/level/home' ) Levels
 
 mixin littleMenuBranding
     a.navbar-brand(href='/')
