--- a/DataMaster/views/editor/npc/home.pug
+++ b/DataMaster/views/editor/npc/home.pug
@@ -2,6 +2,6 @@ include mixins-npc
 
 h2 NPC Editor
 .btn-group
-    button.btn.btn-primary(fishroute='/editor/npc/db/home') Open NPC Database Control
+    button.btn.btn-primary(fishroute='/editor/db/home') Open NPC Database Control
 for npcItem in npcList
     +npcListItem(npcItem.value)
