--- a/DataMaster/views/editor/level/home.pug
+++ b/DataMaster/views/editor/level/home.pug
@@ -2,6 +2,6 @@ include mixins-level
 
 h2 Level Editor
 .btn-group
-    button.btn.btn-primary(fishroute='/editor/level/db/home') Open level Database Control
+    button.btn.btn-primary(fishroute='/editor/db/home') Open Database Control
 for levelItem in levelList
     +levelListItem(levelItem.value)
